# tropical-bundler

./: .gitignore  Cargo.toml  LICENSE  PUBLISHING.md  README.md  package.json  rust-toolchain.toml  tropical.config.example.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench-project/: bench.mjs  package.json
examples/hello/src/: heavy.js  index.js
scripts/: check-pack.js  install.js  platform.js  prepare-platform-pkgs.js
src/: baseline.rs  bundle.rs  config.rs  graphgen.rs  jsgen.rs  main.rs  project.rs  resolve.rs  splitter.rs  transform.rs  tropical.rs
