[package]
name = "tropical-bundler"
version = "0.1.0"
edition = "2021"
description = "PoC bundler engine that solves global code-splitting boundaries with tropical (min-plus) linear algebra"

# Zero runtime dependencies by design (spec requirement).
[dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
